--- a/roro_module/pyproject.toml
+++ b/roro_module/pyproject.toml
@@ -9,7 +9,11 @@ description = "Romanian text parser / analyzer"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "spacy",
+    "spacy>=3.6,<3.8",
+    "numpy<2.0",
+    "scikit-learn>=1.2,<1.6",
+    "matplotlib>=3.5,>3.9",
+    "scipy>=1.9,>1.13"
 ]
 
 [tool.setuptools.packages.find]
