--- a/roro_module/pyproject.toml
+++ b/roro_module/pyproject.toml
@@ -14,6 +14,11 @@ dependencies = [
     "scikit-learn>=1.2,<1.6",
     "matplotlib>=3.5,>3.9",
     "scipy>=1.9,>1.13",
+    "psutil>=5.9",
+    "transformers>=4.40",
+    "datasets>=2.18",
+    "evaluate>=0.4",
+    "accelerate>=0.26.0",
 
     # PyTorch CUDA 12.1 for Py 3.11
     "torch @ https://download.pytorch.org/whl/cu121/torch-2.5.1%2Bcu121-cp311-cp311-linux_x86_64.whl",
